--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "browserify-css": "^0.10.0"
+  }
 }
