--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "lib"
   ],
   "scripts": {
-    "prebuild": "cp ./src/CalenderPicker.css ./lib/CalenderPicker.css && cp ./src/CalenderPicker.css ./preview/CalenderPicker.css",
-    "build:dev": "browserify ./preview/main.jsx -t babelify -o ./preview/bundle.js",
-    "build": "NODE_ENV=production babel ./src --out-dir lib --source-maps inline && npm run build:dev",
-    "start": "npm run build:dev && http-server ./preview -io -p 8080",
+    "build": "NODE_ENV=production babel ./src --out-dir lib --source-maps inline && cp ./src/*.css ./lib/",
+    "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint .",
     "test": "npm run lint && mocha"
   },
@@ -18,12 +16,11 @@
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.3.0",
     "chai": "^3.5.0",
     "enzyme": "^2.8.0",
     "eslint": "^3.19.0",
@@ -34,9 +31,9 @@
     "mocha": "^3.2.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
   },
-  "dependencies": {
-    "browserify-css": "^0.10.0"
-  }
+  "dependencies": {}
 }
