--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^15.4.2"
   },
   "dependencies": {
-    "browserify-css": "^0.10.0"
+    "browserify-css": "^0.10.0",
+    "http-server": "^0.9.0"
   }
 }
