year, month を指定するとカレンらーの情報が返る関数を作りました.
getMonthCalendar(year, month) です.
[week1[{monday},{tueday}...],week2[..],...] で帰ってきます.

--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "moment": "^2.18.1"
+  }
 }
