--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["env", "react"],
   "plugins": [
     "transform-object-rest-spread",
-    "babel-plugin-transform-flow-strip-types"
+    "babel-plugin-transform-flow-strip-types",
+    "babel-plugin-transform-class-properties"
   ]
 }
