--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "NODE_ENV=production babel ./src --out-dir lib --source-maps inline",
     "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint .",
-    "test": "npm run lint && mocha"
+    "test": "npm run lint && mocha",
+    "deploy": "./bin/deploy.sh"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
