--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build": "NODE_ENV=production babel ./src --out-dir lib --source-maps inline",
+    "build:preview": "webpack -p",
     "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint .",
     "test": "npm run lint && mocha",
