--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,13 @@
     "browser"  : true,
     "commonjs" : true,
     "es6"      : true,
+    "mocha"    : true,
     "node"     : true
   },
   "plugins": [
     "import",
     "jsx-a11y",
-    "react",
-    "flowtype"
+    "react"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -34,7 +34,7 @@
     "no-dupe-args": ["error"],
     "no-console": ["warn"],
     "no-const-assign": ["error"],
-    "no-unused-vars": ["warn"],
+    "no-unused-vars": ["error"],
     "object-curly-spacing": ["error", "always"],
     "require-jsdoc": ["error", {
       "require": {
@@ -144,25 +144,7 @@
     "jsx-a11y/role-has-required-aria-props": ["error"],
     "jsx-a11y/role-supports-aria-props": ["error"],
     "jsx-a11y/scope": ["error"],
-    "jsx-a11y/tabindex-no-positive": ["error"],
-    "flowtype/boolean-style": ["error",  "boolean"],
-    "flowtype/define-flow-type": 1,
-    "flowtype/delimiter-dangle": ["error", "never"],
-    "flowtype/generic-spacing": ["error", "never"],
-    "flowtype/no-primitive-constructor-types": ["error"],
-    "flowtype/no-weak-types": ["warn"],
-    "flowtype/object-type-delimiter": ["error", "comma"],
-    "flowtype/require-parameter-type": ["error"],
-    "flowtype/require-return-type": ["error", "always",{ "annotateUndefined": "never" }],
-    "flowtype/require-valid-file-annotation": ["error"],
-    "flowtype/semi": ["error", "always"],
-    "flowtype/space-after-type-colon": ["error", "always"],
-    "flowtype/space-before-generic-bracket": ["error", "never"],
-    "flowtype/space-before-type-colon": ["error", "never"],
-    "flowtype/type-id-match": ["error", "^([A-Z][a-z0-9]+)+Type$"],
-    "flowtype/union-intersection-spacing": ["error",  "always"],
-    "flowtype/use-flow-type": 1,
-    "flowtype/valid-syntax": 1
+    "jsx-a11y/tabindex-no-positive": ["error"]
   },
   "settings": {
     "import/resolver": {"node": {
