--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint . --ext=jsx --ext=js",
     "test": "mocha",
-    "deploy": "./bin/deploy.sh",
+    "deploy:demo": "./bin/travis-deploy.sh",
     "postversion": "git push origin $(git tag -l | tail -n1)"
   },
   "devDependencies": {
