--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "eslint-plugin-mocha": "^4.9.0",
     "eslint-plugin-react": "^6.10.3",
     "mocha": "^3.2.0",
-    "react": "^15.4.2",
+    "prop-types": "^15.5.6",
+    "react": "^15.5.3",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.5.3",
     "sinon": "^2.1.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
