--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^15.5.3",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.5.4",
     "sinon": "^2.1.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
