--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "immutability-helper": "^2.1.2",
     "moment": "^2.18.1"
   },
   "peerDependencies": {
