--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   ],
   "scripts": {
     "build": "NODE_ENV=production babel ./src --out-dir ./lib --source-maps inline",
-    "prepreview": "cp node_modules/normalize.css/normalize.css ./demo/vendor",
-    "build:preview": "npm run prepreview && webpack -p",
+    "build:preview": "cp ./node_modules/normalize.css/normalize.css ./demo/vendor && webpack -p",
     "start": "npm run prepreview && webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint . --ext=jsx --ext=js",
     "test": "mocha",
