--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
       "url": "https://github.com/KamataRyo"
     },
     {
-      "name": "",
-      "email": "",
+      "name": "ItoMaika",
+      "email": "rotr9.e@gmail.com",
       "url": ""
     },
     {
