--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "NODE_ENV=production babel ./src --out-dir ./lib --source-maps inline",
     "build:preview": "cp ./node_modules/normalize.css/normalize.css ./demo/vendor && webpack -p",
-    "start": "npm run prepreview && webpack-dev-server --progress --colors --hot --inline --watch",
+    "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint . --ext=jsx --ext=js",
     "test": "mocha",
     "deploy:demo": "./bin/travis-deploy.sh",
