--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "NODE_ENV=production babel ./src --out-dir ./lib --source-maps inline",
-    "build:preview": "cp ./node_modules/normalize.css/normalize.css ./demo/vendor && webpack -p",
+    "build:preview": "./bin/build-preview.sh && webpack -p",
     "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint . --ext=jsx --ext=js",
     "test": "mocha",
@@ -35,10 +35,12 @@
     "eslint-plugin-react": "^6.10.3",
     "mocha": "^3.2.0",
     "normalize.css": "^6.0.0",
+    "npm": "^5.0.3",
     "prop-types": "^15.5.6",
     "react": "^15.5.3",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.5.4",
+    "react-highlight": "^0.10.0",
     "react-test-renderer": "^15.5.4",
     "sinon": "^2.1.0",
     "webpack": "^2.3.3",
