--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
     "no-unused-vars": ["error"],
     "object-curly-spacing": ["error", "always"],
     "valid-jsdoc": ["error"],
-    "require-jsdoc": ["error", {
+    "require-jsdoc": ["off", {
       "require": {
         "FunctionDeclaration": true,
         "ClassDeclaration": true,
@@ -144,7 +144,6 @@
     "jsx-a11y/heading-has-content": ["error"],
     "jsx-a11y/href-no-hash": ["error"],
     "jsx-a11y/html-has-lang": ["error"],
-    "jsx-a11y/img-has-alt": ["error"],
     "jsx-a11y/img-redundant-alt": ["error"],
     "jsx-a11y/label-has-for": ["error"],
     "jsx-a11y/lang": ["error"],
@@ -152,8 +151,6 @@
     "jsx-a11y/no-access-key": ["error"],
     "jsx-a11y/no-onchange": ["error"],
     "jsx-a11y/no-static-element-interactions": ["error"],
-    "jsx-a11y/onclick-has-focus": ["error"],
-    "jsx-a11y/onclick-has-role": ["error"],
     "jsx-a11y/role-has-required-aria-props": ["error"],
     "jsx-a11y/role-supports-aria-props": ["error"],
     "jsx-a11y/scope": ["error"],
