contributerの情報の追加

--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
       "url": "https://github.com/KamataRyo"
     },
     {
-      "name": "",
-      "email": "",
-      "url": ""
+      "name": "uchinishi",
+      "email": "rp7rf@users.noreply.github.com",
+      "url": "https://github.com/Rp7rf"
     },
     {
       "name": "",
