--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "webpack-dev-server --progress --colors --hot --inline --watch",
     "lint": "eslint . --ext=jsx --ext=js",
     "test": "mocha",
-    "deploy:demo": "./bin/travis-deploy.sh",
+    "deploy:demo": "./bin/travis-deploy-demo.sh",
     "tokengen": "travis encrypt $([[ $(cat ~/.npmrc) =~ _authToken=(.*)$ ]] && echo ${BASH_REMATCH[1]}) --add deploy.api_key",
     "preversion": "npm run lint && npm test",
     "postversion": "git fetch && git pull origin master && git push origin master && git push origin $(git describe --abbrev=0 --tags)"
