--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,16 @@
   "plugins": [
     "transform-object-rest-spread",
     "babel-plugin-transform-class-properties"
-  ]
+  ],
+  "env": {
+    "production": {
+      "plugins": [
+        [
+          "transform-react-remove-prop-types", {
+          "removeImport": true,
+          "ignoreFilenames": ["node_modules"]
+        }]
+      ]
+    }
+  }
 }
